# ripgrep-api

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
docs/: ripgrep.md
src/: builder.rs  config.rs  engine.rs  error.rs  lib.rs  matcher.rs  search.rs  sink.rs  types.rs
tests/: search.rs
tests/fixtures/: .hidden.txt  context.txt  custom.foo  root.txt
tests/fixtures/nested/: inner.rs
tests/fixtures/nested/deeper/: deep.txt
