[package]
name = "ripgrep-api"
version = "0.1.1"
edition = "2024"
authors=["Alex Younger <thealexyounger@proton.me>"]
description="Dev-friendly API wrapper around the ripgrep implementation to be used directly in Rust projects."
license="MIT"
publish=true

[dependencies]
globset = "0.4.18"
grep-matcher = "0.1.8"
grep-pcre2 = { version = "0.1.9", optional = true }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"

[features]
pcre2 = ["grep-pcre2"]
